Remove native-access flag